# TAED2_scooby_doo_team

./: .coverage  .gitignore  Makefile  README.md  data.dvc  dvc.yaml  main.py  parameters_list.json  parameters_run.json  params.yaml  pyproject.toml  s
.dvc/: config
TAED2_scooby_doo_team/: dataset.py  features.py  plots.py
TAED2_scooby_doo_team/modeling/: predict.py  train.py
data/processed/: .gitignore
data/raw/: .gitignore  train-00000-of-00002.parquet.dvc  train-00001-of-00002.parquet.dvc
docs/: dataset_card.md  mkdocs.yml  model_card.md
docs/docs/: index.md
image_classification/: dataset.py  features.py  plots.py
image_classification/modeling/: predict.py  train.py
metrics/: api_stats.json  emissions.csv  model_processed.csv  model_rate.csv  model_stats_api.json  rating_api.csv  scores.json  taed_2.pbix
models/: .gitignore
src/: __init__.py  config.py
src/app/: api.py  grad_cam.py  schemas.py
src/features/: deepchecks_validation.py  prepare.py
src/features_data/: prepare.py
src/modeling/: evaluate.py  test.py  train.py
src/models/: evaluate.py  train.py
tests/: .coverage  .gitignore  test_api.py  test_models.py  tests_api.py
