[tool.poetry]
name = "taed2-scooby-doo-team"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "taed2-scooby-doo-team"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.2.2"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"
mlflow = "^2.16.2"
transformers = "^4.45.1"
torch = "^2.4.1"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pylint = "^3.2.7"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
