[tool.poetry]
name = "taed2-scooby-doo-team"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "taed2-scooby-doo-team"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "<2.3"
numpy = "<2"
mlflow = ">2.0,<2.17"

transformers = "^4.45.1"
torch = "2.2.2"
python-dotenv = "<1.2"
loguru = "^0.7.2"
torchvision = "<0.19"
codecarbon = "<2.6"
fastapi = "<0.120"
dvc = ">3.0,<3.60"
deepchecks = {extras = ["vision"], version = "^0.18.1"}
scikit-learn = "<1.4"


[tool.poetry.group.dev.dependencies]
black = "<24.9"
pylint = "<3.3"
pytest = "<8.4"
pytest-cov = "<5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["src/prepare.py", "src/evaluate.py", "src/train.py", "src/train_api_demo_models.py"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
addopts = "--junitxml=out/tests-report.xml --cov=src --cov-report=html:reports/coverage"
